# 23.24-D-Softwareontwikkeling

./: .gitignore  Doxyfile  README.md
.github/workflows/: doxygen.yml
Dev/: .cproject  .mxproject  .project  Dev.ioc
Dev/Core/Src/: main.c
Doc/html/: _2_template_2cmsis__os_8h_source.html  _core_2_include_2cachel1__armv7_8h_source.html  _core_2_include_2cmsis__armcc_8h.html  _core_2_include_2cmsis__armcc_8h_source.html  _core_2_include_2cmsis__armclang_8h.html  _core_2_include_2cmsis__armclang_8h_source.html  _core_2_include_2cmsis__armclang__ltm_8h.html  _core_2_include_2cmsis__armclang__ltm_8h_source.html  _core_2_include_2cmsis__compiler_8h.html  _core_2_include_2cmsis__compiler_8h_source.html  _core_2_include_2cmsis__gcc_8h.html  _core_2_include_2cmsis__gcc_8h_source.html  _core_2_include_2cmsis__iccarm_8h.html  _core_2_include_2cmsis__iccarm_8h_source.html  _core_2_include_2cmsis__version_8h.html  _core_2_include_2cmsis__version_8h_source.html  _core_2_include_2core__armv81mml_8h_source.html  _core_2_include_2core__armv8mbl_8h_source.html  _core_2_include_2core__armv8mml_8h_source.html  _core_2_include_2core__cm0_8h_source.html  _core_2_include_2core__cm0plus_8h_source.html  _core_2_include_2core__cm1_8h_source.html  _core_2_include_2core__cm23_8h_source.html  _core_2_include_2core__cm33_8h_source.html  _core_2_include_2core__cm35p_8h_source.html  _core_2_include_2core__cm3_8h_source.html  _core_2_include_2core__cm4_8h_source.html  _core_2_include_2core__cm55_8h_source.html  _core_2_include_2core__cm7_8h_source.html  _core_2_include_2core__cm85_8h_source.html  _core_2_include_2core__sc000_8h_source.html  _core_2_include_2core__sc300_8h_source.html  _core_2_include_2core__starmc1_8h_source.html  _core_2_include_2mpu__armv7_8h_source.html  _core_2_include_2mpu__armv8_8h_source.html  _core_2_include_2pac__armv81_8h_source.html  _core_2_include_2pmu__armv8_8h_source.html  _core_2_include_2tz__context_8h_source.html  _core_2_src_2system__stm32f4xx_8c.html  _core___a_2_include_2cmsis__armcc_8h.html  (+1539 more)
Doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_2.js  all_20.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_13.js  classes_14.js  classes_2.js  classes_3.js  (+145 more)
Doc/latex/: _2_template_2cmsis__os_8h_source.tex  _core_2_include_2cachel1__armv7_8h_source.tex  _core_2_include_2cmsis__armcc_8h.tex  _core_2_include_2cmsis__armcc_8h_source.tex  _core_2_include_2cmsis__armclang_8h.tex  _core_2_include_2cmsis__armclang_8h_source.tex  _core_2_include_2cmsis__armclang__ltm_8h.tex  _core_2_include_2cmsis__armclang__ltm_8h_source.tex  _core_2_include_2cmsis__compiler_8h.tex  _core_2_include_2cmsis__compiler_8h_source.tex  _core_2_include_2cmsis__gcc_8h.tex  _core_2_include_2cmsis__gcc_8h_source.tex  _core_2_include_2cmsis__iccarm_8h.tex  _core_2_include_2cmsis__iccarm_8h_source.tex  _core_2_include_2cmsis__version_8h.tex  _core_2_include_2cmsis__version_8h_source.tex  _core_2_include_2core__armv81mml_8h_source.tex  _core_2_include_2core__armv8mbl_8h_source.tex  _core_2_include_2core__armv8mml_8h_source.tex  _core_2_include_2core__cm0_8h_source.tex  _core_2_include_2core__cm0plus_8h_source.tex  _core_2_include_2core__cm1_8h_source.tex  _core_2_include_2core__cm23_8h_source.tex  _core_2_include_2core__cm33_8h_source.tex  _core_2_include_2core__cm35p_8h_source.tex  _core_2_include_2core__cm3_8h_source.tex  _core_2_include_2core__cm4_8h_source.tex  _core_2_include_2core__cm55_8h_source.tex  _core_2_include_2core__cm7_8h_source.tex  _core_2_include_2core__cm85_8h_source.tex  _core_2_include_2core__sc000_8h_source.tex  _core_2_include_2core__sc300_8h_source.tex  _core_2_include_2core__starmc1_8h_source.tex  _core_2_include_2mpu__armv7_8h_source.tex  _core_2_include_2mpu__armv8_8h_source.tex  _core_2_include_2pac__armv81_8h_source.tex  _core_2_include_2pmu__armv8_8h_source.tex  _core_2_include_2tz__context_8h_source.tex  _core_2_src_2system__stm32f4xx_8c.tex  _core___a_2_include_2cmsis__armcc_8h.tex  (+1094 more)
Docs/html/: doxygen_crawl.html  index.html  md__c_1_2_users_2miche_2_documents_2_repositories_223_824-_d-_softwareontwikkeling_2_r_e_a_d_m_e.html  pages.html
Docs/html/search/: all_1.js  pages_0.js  pages_2.js  searchdata.js
Docs/latex/: md__c_1_2_users_2miche_2_documents_2_repositories_223_824-_d-_softwareontwikkeling_2_r_e_a_d_m_e.tex  refman.tex
Doxygen Output/docbook/: index.xml  md__r_e_a_d_m_e.xml
Doxygen Output/html/: doxygen.css  md__r_e_a_d_m_e.html  navtreedata.js  pages.html
Doxygen Output/html/search/: all_1.js  all_3.js  pages_0.js  searchdata.js
Doxygen Output/latex/: md__r_e_a_d_m_e.tex  refman.tex
Media/: .$HLD-softont.drawio.dtmp  HLD-softont.drawio
Software_Development/: platformio.ini
Software_Development/include/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Software_Development/src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
VGA_Driver/: .mxproject  CMakeLists.txt  VGA_Driver.ioc
VGA_Driver/Core/Inc/: bitmap.h  fonts.h  logic_layer.h  main.h  stm32_ub_vga_screen.h  stm32f4xx_conf.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  uart.h  user_interface.h  vga_driver.h
VGA_Driver/Core/Src/: bitmap.c  fonts.c  logic_layer.c  main.c  startup_stm32f4xx.c  stm32_ub_vga_screen.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_rcc.c  system_stm32f4xx.c  uart.c  (+2 more)
VGA_Driver/cmake/stm32cubemx/: CMakeLists.txt
html/: index.html
html/search/: pages_1.js
latex/: index.tex  refman.tex
(+858 files in other folders)
