cmake_minimum_required(VERSION 3.22)

project(stm32cubemx)
add_library(stm32cubemx INTERFACE)

# Enable CMake support for ASM and C languages
enable_language(C ASM)

target_compile_definitions(stm32cubemx INTERFACE 
	USE_HAL_DRIVER 
	STM32F407xx
    $<$<CONFIG:Debug>:DEBUG>
)

target_include_directories(stm32cubemx INTERFACE
    ../../Core/Inc
    ../../Drivers/STM32F4xx_HAL_Driver/Inc
    ../../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy
    ../../Drivers/CMSIS/Device/ST/STM32F4xx/Include
    ../../Drivers/CMSIS/Include
)

target_sources(stm32cubemx INTERFACE
    ../../Core/Src/logic_layer.c
    ../../Core/Src/main.c
    ../../Core/Src/misc.c
    ../../Core/Src/startup_stm32f4xx.c
    ../../Core/Src/stm32_ub_vga_screen.c
    ../../Core/Src/stm32f4xx_dma.c
    ../../Core/Src/stm32f4xx_gpio.c
    ../../Core/Src/stm32f4xx_rcc.c
    ../../Core/Src/stm32f4xx_tim.c
    ../../Core/Src/system_stm32f4xx.c
    ../../Core/Src/uart.c
    ../../Core/Src/user_interface.c
    ../../Core/Src/vga_driver.c
    ../../startup_stm32f407xx.s
    
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
    # ../../Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_exti.c
)

target_link_directories(stm32cubemx INTERFACE
)

target_link_libraries(stm32cubemx INTERFACE
)

# Validate that STM32CubeMX code is compatible with C standard
if(CMAKE_C_STANDARD LESS 11)
    message(ERROR "Generated code requires C11 or higher")
endif()


